--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My First Website</title>
+    <title>Python for Data Scientist beginners</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/website.css">
+    <link rel="shortcut icon" href="/img/favicon.ico" /> 
     <script src="/js/website.js"></script>
   </head>
   <body>
@@ -16,7 +17,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">My First Website</a>
+          <a class="navbar-brand" href="/">Python for Data Scientist beginners</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -27,7 +28,7 @@
       </div>
     </nav>
     <div class="container">
-      <h1>My First Website</h1>
+      <h1>Python For Data Scientist beginners</h1>
       <p>Congratulations - You've got your website up and running. From here you can modify any of the files within to change it to whatever you want.</p>
 
       <p>Next steps</p>
@@ -40,3 +41,4 @@
     </div>
   </body>
 </html>
+
