--- a/instructions.html
+++ b/instructions.html
@@ -22,21 +22,20 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">Home</a></li>
-            <li><a href="instructions.html">Instructions</a></li>
-            <li><a href="howtocodefromnoknowledge.html">How to code from no knowledge</a></li>
+            <li><a href="#">Other Links?</a></li>
           </ul>
         </div>
       </div>
     </nav>
     <div class="container">
       <h1>Python For Data Scientist beginners</h1>
-      <p>Welcome to my website for coding beginners written by a total beginner :)</p>
+      <p>Congratulations - You've got your website up and running. From here you can modify any of the files within to change it to whatever you want.</p>
 
-      <p>I hope you find this website helpful for you.</p>
+      <p>Next steps</p>
       <ul>
-        <li>There's a link page to relevant data science reads <a target="_blank" rel="noopener noreferrer"href="https://pandas.pydata.org/">Panda,</a> <a target="_blank" rel="noopener noreferrer" href="https://jakevdp.github.io/PythonDataScienceHandbook/">Python Data Science Handbook</a> it's an acutal book, <a target="_blank" rel="noopener noreferrer" " href="https://www.edx.org/python-for-data-science">Python for Data Science,</a> this is an online course </li>
-        <li>Where to start? See if you can find a local coding club? If you can look online there's a huge iniative to get people of all ages coding</a></li> 
-        <li>Basic Rules of Coding - Please user lowercase letters when typing (developers seem to find it annoying when you don't)  has a list of tags you can include - why not try them out?</li>
+        <li>Change the page title? You probably don't want a site called "My First Website", so change it in index.html - you'll find it in two places, the first is in a &lt;title&gt; tag, the second is further down, in the nav section.</li>
+        <li>Add a favicon: The little icon that appears to the left of every tab you have open is called a favicon: if you add a file called favicon.ico (a 16x16 pixel image) to your repository, it will appear there for every visitor! You can create one for free <a href="http://onlinefavicon.com/">here!</a></li>
+        <li>Try adding some new content to this page (index.html). <a href="https://www.w3schools.com/tags/">W3Schools</a> has a list of tags you can include - why not try them out?</li>
         <li>Maybe you want your own domain name instead of github.io? <a href="https://www.namecheap.com/support/knowledgebase/article.aspx/9645/2208/how-do-i-link-my-domain-to-github-pages">This link</a> has details on how you can do this with a namecheap domain name.</li>
       </ul>
     </div>
